# quoids

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Fruit.cpp  Fruit.h  chemistry.cpp  chemistry.h  environment.cpp  environment.h  game.cpp  game.h  genetic.cpp  genetic.h  living_thing.cpp  living_thing.h  mammal.cpp  mammal.h  plant.cpp  plant.h  seed.cpp  seed.h  thing.cpp  thing.h  tile.h
